# game-eng-1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ecs_test
ecs/examples/: main.cpp
ecs/include/ecs/: ComponentPool.h  ECSManager.h  Entity.h  System.h
ecs/include/ecs/components/: Camera.h  RenderComponent.h  Transform.h  Velocity.h
ecs/include/ecs/systems/: CameraSystem.h  MovementSystem.h  RenderSystem.h
ecs/src/: ECSManager.cpp
include/camera/: camera.h  camera_controller.h  fps_camera.h  future camera.txt  third_person_camera.h
include/core/: game_loop.h  resource_manager.h  time_manager.h
include/core/debug/: debug_utils.h  logger.h
include/core/resources/: base_resource_manager.h  material_manager.h  model_manager.h  shader_manager.h  texture_manager.h
include/ecs/: Component.h  ECSManager.h  Entity.h  System.h  ecs_next_iteration.txt
include/ecs/components/: CameraComponent.h  CameraControllerComponent.h  MeshRendererComponent.h  OrbitCameraController.h  TransformComponent.h
include/ecs/math/: Matrix4x4.h  Quaternion.h  Vector.h
include/ecs/systems/: CameraControllerSystem.h  RenderSystem.h
include/rendering/: mesh.h  primitive_builder.h  shader.h  texture.h  window.h
include/rendering/debug/: gl_debug.h
include/rendering/model/: material.h  model.h
src/: main.cpp
src/camera/: camera.cpp  camera_controller.cpp  fps_camera.cpp  third_person_camera.cpp
src/core/: game_loop.cpp  resource_manager.cpp  time_manager.cpp
src/core/debug/: debug_utils.cpp  logger.cpp
src/core/resources/: material_manager.cpp  model_manager.cpp  shader_manager.cpp  texture_manager.cpp
src/ecs/: Component.cpp  ECSManager.cpp  Entity.cpp  System.cpp
src/ecs/components/: CameraComponent.cpp  CameraControllerComponent.cpp  MeshRendererComponent.cpp  TransformComponent.cpp
src/ecs/math/: Matrix4x4.cpp
src/ecs/systems/: RenderSystem.cpp
src/input/: future input.txt
src/rendering/: mesh.cpp  primitive_builder.cpp  shader.cpp  texture.cpp  window.cpp
src/rendering/debug/: gl_debug.cpp
src/rendering/model/: material.cpp  model.cpp
